adding missing keyspace as supplier